erased extra apostrophes

--- a/locations.html
+++ b/locations.html
@@ -100,7 +100,7 @@ http://www.carnegiehall.org/ </a> </p>
 <h4>Hotel Chelsea</h4>
 <p>222 W 23rd St</p>
 <img src="https://artanddiasporablog.files.wordpress.com/2013/08/chelsea-hotel.jpg?w=209&h=157&crop=1">
-<p>The Hotel Chelsea is a hotel where many famous musicians and writers stayed at one point or another. It is a designated New York City landmark because of all the famous residents that have lived there, and has been featured on TV shows, songs, and books. Notable musicians include the Grateful Dead, Patti Smith, Jimi Hendrix, and Rufus Wainwright. Leonard Cohen once wrote a song called “Hotel Chelsea #2”, and Graham Nash wrote a song called “The Chelsea Hotel”. Many other musicians have also referenced the hotel in their work. </p>"+
+<p>The Hotel Chelsea is a hotel where many famous musicians and writers stayed at one point or another. It is a designated New York City landmark because of all the famous residents that have lived there, and has been featured on TV shows, songs, and books. Notable musicians include the Grateful Dead, Patti Smith, Jimi Hendrix, and Rufus Wainwright. Leonard Cohen once wrote a song called “Hotel Chelsea #2”, and Graham Nash wrote a song called “The Chelsea Hotel”. Many other musicians have also referenced the hotel in their work. </p>
 <p>Attribution: Wikipedia, <a href=https://en.wikipedia.org/wiki/Hotel_Chelsea>https://en.wikipedia.org/wiki/Hotel_Chelsea</a> </p> 
 </div>
 
@@ -140,7 +140,7 @@ http://www.carnegiehall.org/ </a> </p>
 <h4>Village Vanguard</h4>
 <p>178 7th Ave S, New York</p>
 <img src="https://beatchickwrites.files.wordpress.com/2014/12/village-vanguard-interior.jpg?w=300&h=189">
-<p>The Village Vanguard is a jazz club that was opened on February 22, 1935 by Max Gordon. At first, it featured many forms of music, such as folk music and beat poetry, but it switched to an all-jazz format in 1957. This club has helped unknown musicians, such as Thelonious Monk, launch their careers.Well known musicians such as John Coltrane and Bill Evans were regulars and recorded many songs there as well. In 1989, Max Gordon died. The day after, Lorraine Gordon closed the Vanguard. But the following day, she reopened it and has continued to run the place ever since. She has not made any alterations of any kind, and kept it how it was, how people liked it.</p>"+
+<p>The Village Vanguard is a jazz club that was opened on February 22, 1935 by Max Gordon. At first, it featured many forms of music, such as folk music and beat poetry, but it switched to an all-jazz format in 1957. This club has helped unknown musicians, such as Thelonious Monk, launch their careers.Well known musicians such as John Coltrane and Bill Evans were regulars and recorded many songs there as well. In 1989, Max Gordon died. The day after, Lorraine Gordon closed the Vanguard. But the following day, she reopened it and has continued to run the place ever since. She has not made any alterations of any kind, and kept it how it was, how people liked it.</p>
 <p>Attribution: Village Vanguard, <a href="https://en.wikipedia.org/wiki/Village_Vanguard">https://en.wikipedia.org/wiki/Village_Vanguard</a> </p> 
 </div>
 
