--- a/locations.html
+++ b/locations.html
@@ -46,7 +46,8 @@ li a:hover {
 <body>
 <h1 class="center"> Locations </h1>
 <br>
-<p>Click the picture to get directions!</p>
+<div class="locations">
+<p>Click the picture to get directions!</p></div>
 <div class="locations">
 <h4>The Apollo Theater</h4>
 <p>253 W 125th St</p>
