--- a/musicmaps.html
+++ b/musicmaps.html
@@ -160,7 +160,8 @@
             '<div id="bodyContent4">'+
             "<p>The Brill Building is famous for housing music industry offices and studios where some of the most popular American music tunes of the 1940s to the 1960s were written. The songwriting team of Leiber and Stoller (Jerry Leiber and Mike Stoller), for example, composed a surprising number of hits for early R&B singers, including the Elvis Presley hits 'Hound Dog', 'Jailhouse Rock', and 'Treat Me Nice'. Scores of music publishers had offices in the Brill Building. Songs produced in this building were constantly at the top of Billboard's Hit Parade and played by the leading bands of the day.</p>"+
             '<p>Attribution: Brill Building, <a href="https://en.wikipedia.org/wiki/Brill_Building">'+
-            'https://en.wikipedia.org/wiki/Brill_Building</a> </p> '
+            'https://en.wikipedia.org/wiki/Brill_Building</a> </p> '+
+            '<p><a href="https://www.google.com/maps/dir/Current+Location/Brill+Building">Click here for directions</a></p> '
             '</div>'+
             '</div>';
             var content5 = '<div id="content5">'+
@@ -208,7 +209,8 @@
               '<div id="bodyContent8">'+
               "<p>Located in Harlem, the Apollo opened in 1933 and was a main player in the birth of jazz, swing, bebop, R&B, gospel, blues, and soul. They continue to host their famous Amateur Night several times, a month, as well as other performances and also educational opportunities. Many famous musicians have had the opportunity to perform at the Apollo, including Ella Fitzgerald, Sarah Vaughan, Billie Holiday, James Brown, Jimi Hendrix, and Michael Jackson.</p>"+
               '<p>Attribution: The Apollo Theater, <a href="https://www.apollotheater.org/">'+
-              'https://www.apollotheater.org/</a> </p> '
+              'https://www.apollotheater.org/</a> </p> '+
+              '<p><a href="https://www.google.com/maps/dir/Current+Location/Apollo+Theater">Click here for directions</a></p> '
               '</div>'+
               '</div>';
               var content9 = '<div id="content9">'+
