--- a/locations.html
+++ b/locations.html
@@ -47,7 +47,7 @@ li a:hover {
 <h1 class="center"> Locations </h1>
 <br>
 <div class="locations">
-<p>Click the picture to get directions!</p></div>
+<h2>Click the picture to get directions!</h2></div>
 <div class="locations">
 <h4>The Apollo Theater</h4>
 <p>253 W 125th St</p>
