--- a/locations.html
+++ b/locations.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <body background="http://img0.mxstatic.com/wallpapers/c3ae9d2c873882e2bb5396baa9720c5b_large.jpeg">
+      <body background="background.jpeg">
       <link rel="SHORTCUT ICON" href="logo.png"/>
   <title>Music Maps</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
