--- a/locations.html
+++ b/locations.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <body background="background.jpeg" id="background">
       <link rel="SHORTCUT ICON" href="logo.png"/>
   <title>Music Maps</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <link rel="stylesheet" href="musicmaps.css">
+<div class="body"></div>
 <style>
 ul {
     list-style-type: none;
