--- a/locations.html
+++ b/locations.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <link rel="stylesheet" href="musicmaps.css">
-<div class="body"></div>
+<div class="body">
 <style>
 ul {
     list-style-type: none;
@@ -147,6 +147,7 @@ http://www.carnegiehall.org/ </a> </p>
 <p>Attribution: Village Vanguard, <a href="https://en.wikipedia.org/wiki/Village_Vanguard">https://en.wikipedia.org/wiki/Village_Vanguard</a> </p> 
 </div>
 
+</div>
 
 
 </body>
