--- a/locations.html
+++ b/locations.html
@@ -7,6 +7,7 @@
 
 <link rel="stylesheet" href="musicmaps.css">
 <div class="body">
+<font color="white">
 <style>
 ul {
     list-style-type: none;
@@ -148,7 +149,7 @@ http://www.carnegiehall.org/ </a> </p>
 </div>
 
 </div>
-
+</font>
 
 </body>
 </html>
