--- a/locations.html
+++ b/locations.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" href="musicmaps.css">
 <div class="body">
-<font color="#9933ff">
+<font color="#660066">
 <style>
 ul {
     list-style-type: none;
