--- a/aboutUs.html
+++ b/aboutUs.html
@@ -49,7 +49,8 @@ li a:hover {
 <div class="aboutus">
 
 <br>
-<img src="gwc.jpg"> <br><br>
+<img src="aboutus.jpg">
+<img src="gwc.jpg"> <br>
 <br></div>
 <div class="welcome">
    <div class="container">
