--- a/aboutUs.html
+++ b/aboutUs.html
@@ -49,7 +49,7 @@ li a:hover {
 <div class="aboutus">
 
 <br>
-<img src="aboutus.jpg">
+<img src="aboutus.JPG">
 <img src="gwc.jpg"> <br>
 <br></div>
 <div class="welcome">
