--- a/musicmaps.html
+++ b/musicmaps.html
@@ -106,7 +106,7 @@
         var cafewha= {lat: 40.7301  , lng: -74.0006};
         var chelsea= {lat: 40.744350  , lng: -73.996852};
         var madison= {lat: 40.7505  , lng: -73.9934};
-
+        var palladium ={lat: 40.757996968 , lng: -73.976329428};
 
 
         var map = new google.maps.Map(document.getElementById('map'), {
@@ -271,6 +271,19 @@
               '<p><a href="https://www.google.com/maps/dir/Current+Location/Madison+Square+Garden">Click here for directions</a></p> '
               '</div>'+
               '</div>';
+              var content13= '<div id="content13">'+
+              '<div id="siteNotice">'+
+              '</div>'+
+              '<h1 id="firstHeading" class="firstHeading">Palladium Ballroom</h1>'+
+              '53rd Street and Broadway' + '<br>' +
+              '<img src="https://pp.vk.me/c629227/v629227381/22df1/wTPli5ucpFU.jpg">'+
+              '<div id="bodyContent13">'+
+              "<p>The Palladium Ballroom was a venue known as the “home of the mamba” and thought to be one of the most important places in the development of Latin music and dance. It started playing Latin music in 1947, and had the “big three” Latin orchestras--Tito Puente,Tito Rodríguez, and Machito. Eventually, the Palladium was playing Latin music all week long, as well as having dance contests and mambo shows. People from all different backgrounds came to the Palladium to enjoy the music. It closed in 1966. </p>"+
+              '<p>Attribution: Palladium Ballroom, <a href="http://palladium-mambo.com/ballroom.shtml">'+
+              'http://palladium-mambo.com/ballroom.shtml</a> </p> '+
+              '<p><a href="https://www.google.com/maps/dir/40.680911,-74.001215/Broadway+%26+West+53rd+Street,+New+York,+NY+10019/@40.723003,-74.0665707,12z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x89c258f876704cdf:0x5f39d725718ab86b!2m2!1d-73.9828809!2d40.7633876">Click here for directions</a></p> '
+              '</div>'+
+              '</div>';
 
         //calls the infowindows
         var infowindow1 = new google.maps.InfoWindow({
@@ -308,6 +321,9 @@
         });
         var infowindow12 = new google.maps.InfoWindow({
           content: content12
+        });
+         var infowindow13 = new google.maps.InfoWindow({
+          content: content13
         });
 
         //creates markers
@@ -419,6 +435,9 @@
         });
         marker12.addListener('click', function() {
           infowindow12.open(map, marker12);
+        });
+      marker13.addListener('click', function() {
+          infowindow13.open(map, marker13);
         });
 
         // Try HTML5 geolocation.
