--- a/locations.html
+++ b/locations.html
@@ -125,6 +125,14 @@ http://www.carnegiehall.org/ </a> </p>
 </div>
 
 <div class="locations">
+<h4>Palladium Ballroom</h4>
+<p>53rd Street and Broadway</p>
+<a href="https://www.google.com/maps/dir/40.680911,-74.001215/Broadway+%26+West+53rd+Street,+New+York,+NY+10019/@40.7445957,-74.0191922,12z/data=!4m9!4m8!1m1!4e1!1m5!1m1!1s0x89c258f876704cdf:0x5f39d725718ab86b!2m2!1d-73.9828809!2d40.7633876"><img src="https://pp.vk.me/c629227/v629227381/22df1/wTPli5ucpFU.jpg"></a>
+<p>The Palladium Ballroom was a venue known as the “home of the mamba” and thought to be one of the most important places in the development of Latin music and dance. It started playing Latin music in 1947, and had the “big three” Latin orchestras--Tito Puente,Tito Rodríguez, and Machito. Eventually, the Palladium was playing Latin music all week long, as well as having dance contests and mambo shows. People from all different backgrounds came to the Palladium to enjoy the music. It closed in 1966. </p>
+<p>Attribution: Palladium Ballroom, <a href=" http://palladium-mambo.com/ballroom.shtml"> http://palladium-mambo.com/ballroom.shtml</a></p>
+</div>
+
+<div class="locations">
 <h4>1520 Sedgwick Ave</h4>
 <p>1520 Sedgwick Ave, Bronx</p>
 <a href="https://www.google.com/maps/dir/Current+Location/1520+Sedgwick+Ave"><img src="https://3.bp.blogspot.com/-hEhnUVWqKkg/UTehZRMxr9I/AAAAAAAACRQ/xd1d71xuHgw/s400/220px-1520_Sedwick_Ave.,_Bronx,_New_York1.JPG"></a>
