--- a/aboutUs.html
+++ b/aboutUs.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <link rel="stylesheet" href="musicmaps.css">
+<div class="body">
+<font color="white">
 <style>
 ul {
     list-style-type: none;
@@ -68,9 +70,11 @@ li a:hover {
         </div>
    </div>
  </div>
- 
+
 <div class="aboutus">
 <img src="gwc.jpg">
 </div>
+
+</div></font>
 </body>
 </html>
