changed palladium origin

--- a/musicmaps.html
+++ b/musicmaps.html
@@ -281,7 +281,7 @@
               "<p>The Palladium Ballroom was a venue known as the “home of the mamba” and thought to be one of the most important places in the development of Latin music and dance. It started playing Latin music in 1947, and had the “big three” Latin orchestras--Tito Puente,Tito Rodríguez, and Machito. Eventually, the Palladium was playing Latin music all week long, as well as having dance contests and mambo shows. People from all different backgrounds came to the Palladium to enjoy the music. It closed in 1966. </p>"+
               '<p>Attribution: Palladium Ballroom, <a href="http://palladium-mambo.com/ballroom.shtml">'+
               'http://palladium-mambo.com/ballroom.shtml</a> </p> '+
-              '<p><a href="https://www.google.com/maps/dir/Current+Location/Broadway+%26+West+53rd+Street,+New+York,+NY+10019/@40.723003,-74.0665707,12z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x89c258f876704cdf:0x5f39d725718ab86b!2m2!1d-73.9828809!2d40.7633876">Click here for directions</a></p> '
+              '<p><a href="https://www.google.com/maps/dir/Current+Location/Broadway+%26+West+53rd+Street,+New+York,+NY+10019">Click here for directions</a></p> '
               '</div>'+
               '</div>';
 
