--- a/aboutUs.html
+++ b/aboutUs.html
@@ -9,7 +9,7 @@
 
 <link rel="stylesheet" href="musicmaps.css">
 <div class="body">
-<font color="white">
+<font color="#a300cc">
 <style>
 ul {
     list-style-type: none;
