--- a/aboutUs.html
+++ b/aboutUs.html
@@ -9,7 +9,7 @@
 
 <link rel="stylesheet" href="musicmaps.css">
 <div class="body">
-<font color="#a300cc">
+<font color="#a300cc"><strong>
 <style>
 ul {
     list-style-type: none;
@@ -75,6 +75,6 @@ li a:hover {
 <img src="gwc.jpg">
 </div>
 
-</div></font>
+</div></font>></strong>
 </body>
 </html>
