changed font color

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -9,7 +9,7 @@
 
 <link rel="stylesheet" href="musicmaps.css">
 <div class="body">
-<font color="#a300cc"><strong>
+<font color="white"><strong>
 <style>
 ul {
     list-style-type: none;
