--- a/aboutUs.html
+++ b/aboutUs.html
@@ -8,7 +8,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <link rel="stylesheet" href="musicmaps.css">
-
+<div class="body">
+<font color="white">
 <style>
 ul {
     list-style-type: none;
@@ -74,5 +75,6 @@ li a:hover {
 <img src="gwc.jpg">
 </div>
 
+</div></font>
 </body>
 </html>
