--- a/musicmaps.html
+++ b/musicmaps.html
@@ -120,7 +120,7 @@
             '</div>'+
             '<h1 id="firstHeading" class="firstHeading">Louis Armstrong House</h1>'+
             '34-56 107th Street, Corona'+ '<br>' +
-            '<img src="https://jazzlives.files.wordpress.com/2012/03/louis-house-outside.jpeg">'+
+            '<img src="https://jazzlives.files.wordpress.com/2012/03/louis-house-outside.jpeg" height="42" width="42">'+
             '<div id="bodyContent">'+
             '<p>In 1943, Louis Armstrong and his wife, Lucille, settled in a modest house in Corona, Queens, where they lived for the remainder of their lives. No one has lived in the house since the Armstrongs, and the house and its furnishings remain very much as they were during Louis and Lucille’s lifetime. Today, the Louis Armstrong House Museum is open to the public, offering guided tours of Louis’s longtime home. On the tour, audio clips from Louis’s homemade recordings are played, and visitors hear Louis practicing his trumpet, enjoying a meal, or talking with his friends. Visitors also get to enjoy an exhibit on Louis’s life and legacy, and the Armstrongs’ beautiful Japanese-inspired garden.</p>'+
             '<p>Attribution: Louis Armstrong House, <a href="http://www.louisarmstronghouse.org/">'+
