--- a/musicmaps.html
+++ b/musicmaps.html
@@ -133,7 +133,7 @@
             '</div>'+
             '<h1 id="firstHeading" class="firstHeading">Tin Pan Alley</h1>'+
             '28th street between 5th Avenue and Broadway' + '<br>' +
-            '<img src="https://duckduckgo.com/i/3b925012.jpg">'+
+            '<img src="https://duckduckgo.com/i/3b925012.jpg" height="60" width="80">'+
             '<div id="bodyContent2">'+
             '<p>These buildings were where a collection of New York City music publishers and songwriters who dominated the popular music of the United States in the late 19th century and early 20th century set up shop. A plaque exists on the sidewalk on 28th Street between Broadway and Sixth that commemorates it. The alley continued into the 1950s when earlier styles of American popular music were upstaged by the rise of rock & roll.</p>'+
             '<p>Attribution: Tin Pan Alley, <a href="https://en.wikipedia.org/wiki/Tin_Pan_Alley">'+
@@ -146,7 +146,7 @@
             '</div>'+
             '<h1 id="firstHeading" class="firstHeading">CBGB</h1>'+
             '315 Bowery, New York, 10003' + '<br>' +
-            '<img src="https://s-media-cache-ak0.pinimg.com/236x/20/0f/32/200f321300b33551bbe721fec3cac67f.jpg">'+
+            '<img src="https://s-media-cache-ak0.pinimg.com/236x/20/0f/32/200f321300b33551bbe721fec3cac67f.jpg" height="60" width="80">'+
             '<div id="bodyContent3">'+
             '<p>CBGB was founded by Hilly Kristal in 1973. The letters stood for Country Bluegrass and Blues, which was what Kristal intended, but instead became a place for punk rock and new wave bands to perform such the Ramones, Blondie, Talking Heads, Misfits, Television, Patti Smith Group, The Dead Boys, The Dictators, The Cramps, and Joan Jett. </p>'+
             '<p>Attribution: CBGB, <a href="http://www.cbgb.com/">'+
@@ -159,7 +159,7 @@
             '</div>'+
             '<h1 id="firstHeading" class="firstHeading">Brill Building</h1>'+
             '1619 Broadway, New York, NY 10019' + '<br>' +
-            '<img src="http://farm2.static.flickr.com/1026/559416457_f0bce671cc_m.jpg">'+
+            '<img src="http://farm2.static.flickr.com/1026/559416457_f0bce671cc_m.jpg" height="60" width="80">'+
             '<div id="bodyContent4">'+
             "<p>The Brill Building is famous for housing music industry offices and studios where some of the most popular American music tunes of the 1940s to the 1960s were written. The songwriting team of Leiber and Stoller (Jerry Leiber and Mike Stoller), for example, composed a surprising number of hits for early R&B singers, including the Elvis Presley hits 'Hound Dog', 'Jailhouse Rock', and 'Treat Me Nice'. Scores of music publishers had offices in the Brill Building. Songs produced in this building were constantly at the top of Billboard's Hit Parade and played by the leading bands of the day.</p>"+
             '<p>Attribution: Brill Building, <a href="https://en.wikipedia.org/wiki/Brill_Building">'+
@@ -172,7 +172,7 @@
               '</div>'+
               '<h1 id="firstHeading" class="firstHeading">Carnegie Hall</h1>'+
               '881 7th Ave, New York' + '<br>' +
-              '<img src="http://www.jessicasandidge.com/uploads/3/6/1/6/3616998/_4320010.jpg">'+
+              '<img src="http://www.jessicasandidge.com/uploads/3/6/1/6/3616998/_4320010.jpg" height="60" width="80">'+
               '<div id="bodyContent5">'+
               "<p>Built in 1891 by Andrew Carnegie with the architect William Burnet Tuthill, Carnegie Hall is a large concert venue with three auditoriums. It regularly hosts concerts and other events for people of all ages. Some notable performers have been pianist and composer Sergei Rachmaninoff, performer Judy Garland, Reverend Dr. Martin Luther King Jr., Leonard Bernstein, and more. </p>"+
               '<p>Attribution: Carnegie Hall, <a href="http://www.carnegiehall.org/">'+
@@ -185,7 +185,7 @@
             '</div>'+
             '<h1 id="firstHeading" class="firstHeading">Danceteria</h1>'+
             '30 W. 21st St., New York'+ '<br>' +
-            '<img src="http://s3.amazonaws.com/cms_uploads/liz/twilo.jpg">'+
+            '<img src="http://s3.amazonaws.com/cms_uploads/liz/twilo.jpg" height="60" width="80">'+
             '<div id="bodyContent6">'+
             "<p>Danceteria was a well-known four-floor nightclub located in New York City which operated from 1979 until 1986. It catered to a diverse after-hours crowd coming from the downtown rock clubs Mudd Club, Trax, TR3, Chinese Chance and CBGB. Madonna, the Beastie Boys and Keith Haring all began their careers at this famed 80s dance club. It's also where British acts as enduring as the Smiths took their first NYC bows. Now the space is occupied by a showroom for high-end granite and marble products.</p>"+
             '<p>Attribution: Danceteria, <a href="https://en.wikipedia.org/wiki/Danceteria">'+
@@ -198,7 +198,7 @@
               '</div>'+
               '<h1 id="firstHeading" class="firstHeading">1520 Sedgwick Ave</h1>'+
               '1520 Sedgwick Ave, Bronx' + '<br>' +
-              '<img src="https://3.bp.blogspot.com/-hEhnUVWqKkg/UTehZRMxr9I/AAAAAAAACRQ/xd1d71xuHgw/s400/220px-1520_Sedwick_Ave.,_Bronx,_New_York1.JPG">'+
+              '<img src="https://3.bp.blogspot.com/-hEhnUVWqKkg/UTehZRMxr9I/AAAAAAAACRQ/xd1d71xuHgw/s400/220px-1520_Sedwick_Ave.,_Bronx,_New_York1.JPG" height="60" width="80">'+
               '<div id="bodyContent7">'+
               "<p>1520 Sedgwick Avenue is a 102-unit apartment building in the Morris Heights neighborhood in the Bronx, New York City. In 2010, The New York Times reported that it is the accepted birthplace of hip hop.  Clive Campbell, later known as DJ Kool Herc, is credited with helping to start hip hop and rap music at a house concert in the building on August 11, 1973. At the concert he was DJing and emceeing in the recreation room of 1520 Sedgwick Avenue. Sources have noted that while 1520 Sedgwick Avenue was not the actual birthplace of hip hop – the genre developed slowly in several places in the 1970s – it was verified to be the place where one of the pivotal and formative events occurred that spurred hip hop culture forward. During a rally to save the building, DJ Kool Herc said, '1520 Sedgwick is the Bethlehem of Hip-Hop culture.'</p>"+
               '<p>Attribution: 1520 Sedgwick Ave, <a href="https://en.wikipedia.org/wiki/1520_Sedgwick_Avenue">'+
@@ -211,7 +211,7 @@
               '</div>'+
               '<h1 id="firstHeading" class="firstHeading">The Apollo Theater</h1>'+
               '253 W 125th St, New York' + '<br>' +
-              '<img src="https://s-media-cache-ak0.pinimg.com/236x/15/4f/98/154f9804b05200abfc96b476394ed468.jpg">'+
+              '<img src="https://s-media-cache-ak0.pinimg.com/236x/15/4f/98/154f9804b05200abfc96b476394ed468.jpg" height="60" width="80">'+
               '<div id="bodyContent8">'+
               "<p>Located in Harlem, the Apollo opened in 1933 and was a main player in the birth of jazz, swing, bebop, R&B, gospel, blues, and soul. They continue to host their famous Amateur Night several times, a month, as well as other performances and also educational opportunities. Many famous musicians have had the opportunity to perform at the Apollo, including Ella Fitzgerald, Sarah Vaughan, Billie Holiday, James Brown, Jimi Hendrix, and Michael Jackson.</p>"+
               '<p>Attribution: The Apollo Theater, <a href="https://www.apollotheater.org/">'+
@@ -224,7 +224,7 @@
               '</div>'+
               '<h1 id="firstHeading" class="firstHeading">Village Vanguard</h1>'+
               '178 7th Ave S, New York' + '<br>' +
-              '<img src="https://beatchickwrites.files.wordpress.com/2014/12/village-vanguard-interior.jpg?w=300&h=189">'+
+              '<img src="https://beatchickwrites.files.wordpress.com/2014/12/village-vanguard-interior.jpg?w=300&h=189" height="60" width="80">'+
               '<div id="bodyContent9">'+
               "<p>The Village Vanguard is a jazz club that was opened on February 22, 1935 by Max Gordon. At first, it featured many forms of music, such as folk music and beat poetry, but it switched to an all-jazz format in 1957. This club has helped unknown musicians, such as Thelonious Monk, launch their careers.Well known musicians such as John Coltrane and Bill Evans were regulars and recorded many songs there as well. In 1989, Max Gordon died. The day after, Lorraine Gordon closed the Vanguard. But the following day, she reopened it and has continued to run the place ever since. She has not made any alterations of any kind, and kept it how it was, how people liked it.</p>"+
               '<p>Attribution: Village Vanguard, <a href="https://en.wikipedia.org/wiki/Village_Vanguard">'+
@@ -237,7 +237,7 @@
               '</div>'+
               '<h1 id="firstHeading" class="firstHeading">Cafe Wha?</h1>'+
               '115 Macdougal St' + '<br>' +
-              '<img src="http://tse3.mm.bing.net/th?id=OIP.Me96779ddf33959dd450dbd06c9efc7d0o0&w=230&h=170&rs=1&pcl=dddddd&pid=1.1">'+
+              '<img src="http://tse3.mm.bing.net/th?id=OIP.Me96779ddf33959dd450dbd06c9efc7d0o0&w=230&h=170&rs=1&pcl=dddddd&pid=1.1" height="60" width="80">'+
               '<div id="bodyContent10">'+
               "<p>Cafe Wha is a club located in Greenwich Village, Manhattan. It was started by Manuel Lee Roth in 1959 in a garage on Macdougal Street. Many musicians performed there, including Bob Dylan, who showed up at age 19 after hitchhiking to New York from Minnesota. Along with Dylan, musicians such as Jimi Hendrix and Bruce Springsteen performed there at the beginning of their careers. Other visitors included Allen Ginsberg and RIchard Pryor. Today, you can visit to hear a variety of music. </p>"+
               '<p>Attribution: Cafe Wha?, <a href="cafewha.com">'+
@@ -250,7 +250,7 @@
               '</div>'+
               '<h1 id="firstHeading" class="firstHeading">Hotel Chelsea</h1>'+
               '222 W 23rd St' + '<br>' +
-              '<img src="https://artanddiasporablog.files.wordpress.com/2013/08/chelsea-hotel.jpg?w=209&h=157&crop=1">'+
+              '<img src="https://artanddiasporablog.files.wordpress.com/2013/08/chelsea-hotel.jpg?w=209&h=157&crop=1" height="60" width="80">'+
               '<div id="bodyContent11">'+
               "<p>	The Hotel Chelsea is a hotel where many famous musicians and writers stayed at one point or another. It is a designated New York City landmark because of all the famous residents that have lived there, and has been featured on TV shows, songs, and books. Notable musicians include the Grateful Dead, Patti Smith, Jimi Hendrix, and Rufus Wainwright. Leonard Cohen once wrote a song called “Hotel Chelsea #2”, and Graham Nash wrote a song called “The Chelsea Hotel”. Many other musicians have also referenced the hotel in their work. </p>"+
               '<p>Attribution: Wikipedia, <a https://en.wikipedia.org/wiki/Hotel_Chelsea">'+
@@ -263,7 +263,7 @@
               '</div>'+
               '<h1 id="firstHeading" class="firstHeading">Madison Square Garden</h1>'+
               '4 Pennsylvania Plaza' + '<br>' +
-              '<img src="http://s2.dmcdn.net/Wx7u4/280x157-B_w.jpg">'+
+              '<img src="http://s2.dmcdn.net/Wx7u4/280x157-B_w.jpg" height="60" width="80">'+
               '<div id="bodyContent12">'+
               "<p>Madison Square Garden is an indoor arena, located on top of Pennsylvania Station. Many concerts are held there, as well  It is very large, holding up to 20,000 people, and is the third busiest music arena in the world. Many famous musicians have played at Madison Square Garden, including Elton John, Whitney Houston, Billy Joel, Michael Jackson, and Taylor Swift. John Lennon made his last concert appearance at Madison Square Garden before his death in 1980. </p>"+
               '<p>Attribution: Madison Square Garden, <a href="https://en.wikipedia.org/wiki/Madison_Square_Garden">'+
@@ -276,7 +276,7 @@
               '</div>'+
               '<h1 id="firstHeading" class="firstHeading">Palladium Ballroom</h1>'+
               '53rd Street and Broadway' + '<br>' +
-              '<img src="https://pp.vk.me/c629227/v629227381/22df1/wTPli5ucpFU.jpg">'+
+              '<img src="https://pp.vk.me/c629227/v629227381/22df1/wTPli5ucpFU.jpg" height="60" width="80">'+
               '<div id="bodyContent13">'+
               "<p>The Palladium Ballroom was a venue known as the “home of the mamba” and thought to be one of the most important places in the development of Latin music and dance. It started playing Latin music in 1947, and had the “big three” Latin orchestras--Tito Puente,Tito Rodríguez, and Machito. Eventually, the Palladium was playing Latin music all week long, as well as having dance contests and mambo shows. People from all different backgrounds came to the Palladium to enjoy the music. It closed in 1966. </p>"+
               '<p>Attribution: Palladium Ballroom, <a href="http://palladium-mambo.com/ballroom.shtml">'+
