--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ li a:hover {
   <div class="container">
     <h1> Music Maps</h1><br>
     <p>Discover the coolest music related sites in New York City. </p>
+    <p style="font-size:12px">"Let the music take you there."</p>
   </div>
 </div>
 
