--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ li a:hover {
   <div class="container">
     <h1> Music Maps</h1><br>
     <p>Discover the coolest music related sites in New York City. </p>
-   <p class="tagline">"Let the music take you there."</p>
+   <p><div class="tagline">"Let the music take you there."</p></div>
   </div>
 </div>
 
