--- a/musicmaps.html
+++ b/musicmaps.html
@@ -211,7 +211,7 @@
               '</div>'+
               '<h1 id="firstHeading" class="firstHeading">The Apollo Theater</h1>'+
               '253 W 125th St, New York' + '<br>' +
-              '<img src="https://s-media-cache-ak0.pinimg.com/236x/15/4f/98/154f9804b05200abfc96b476394ed468.jpg" height="60" width="80">'+
+              '<img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiy-OfVxNbQAhVK6IMKHRGrBq4QjRwIBw&url=http%3A%2F%2Fstylemagazine.com%2Fnews%2F2016%2Fjul%2F01%2Fapollo-theater-hold-auditions-new-orleans-internet%2F&psig=AFQjCNG8Ou-Uf8ugq1qkObqOAd4pWCNeCQ&ust=1480803394995065" height="60" width="80">'+
               '<div id="bodyContent8">'+
               "<p>Located in Harlem, the Apollo opened in 1933 and was a main player in the birth of jazz, swing, bebop, R&B, gospel, blues, and soul. They continue to host their famous Amateur Night several times, a month, as well as other performances and also educational opportunities. Many famous musicians have had the opportunity to perform at the Apollo, including Ella Fitzgerald, Sarah Vaughan, Billie Holiday, James Brown, Jimi Hendrix, and Michael Jackson.</p>"+
               '<p>Attribution: The Apollo Theater, <a href="https://www.apollotheater.org/">'+
