replaced img src for apollo theater

--- a/locations.html
+++ b/locations.html
@@ -53,7 +53,7 @@ li a:hover {
 <div class="locations">
 <h4>The Apollo Theater</h4>
 <p>253 W 125th St</p>
-<a href="https://www.google.com/maps/dir/Current+Location/Apollo+Theater"><img src="https://s-media-cache-ak0.pinimg.com/236x/15/4f/98/154f9804b05200abfc96b476394ed468.jpg"></a>
+<a href="https://www.google.com/maps/dir/Current+Location/Apollo+Theater"><img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiy-OfVxNbQAhVK6IMKHRGrBq4QjRwIBw&url=http%3A%2F%2Fstylemagazine.com%2Fnews%2F2016%2Fjul%2F01%2Fapollo-theater-hold-auditions-new-orleans-internet%2F&psig=AFQjCNG8Ou-Uf8ugq1qkObqOAd4pWCNeCQ&ust=1480803394995065"></a>
 <p>Located in Harlem, the Apollo opened in 1933 and was a main player in the birth of jazz, swing, bebop, R&B, gospel, blues, and soul. They continue to host their famous Amateur Night several times, a month, as well as other performances and also educational opportunities. Many famous musicians have had the opportunity to perform at the Apollo, including Ella Fitzgerald, Sarah Vaughan, Billie Holiday, James Brown, Jimi Hendrix, and Michael Jackson.</p>
 <p>Attribution: Apollo Theater, <a href="https://www.apollotheater.org/">https://www.apollotheater.org/ </a> </p>
 </div>
